refactor: change conversion method